Library (kdtree.h): new k-d tree space-partitioning tree library
With this commit, a new k-d tree library is added in Gnuasto, that is
written from scratch for optimal memory and CPU usage. It currently
contains two higher level functions for tree creation and nearest neighbour
searches.

This is particularly useful for matching multidimensional points, which
will be used in the future when the quad matching algorithm will be
integrated for astrometry in the 'match' program. It can also be used for
more optimal and multi-threaded matching of large catalogs.

--- a/NEWS
+++ b/NEWS
@@ -87,6 +87,8 @@ See the end of the file for license conditions.
    - GAL_INTERPOLATE_NEIGHBORS_FUNC_MAX: Use maximum for interpolation.
    - GAL_INTERPOLATE_NEIGHBORS_FUNC_MEDIAN: Use median for interpolation.
    - GAL_INTERPOLATE_NEIGHBORS_FUNC_INVALID: for error-handling/completeness.
+   - gal_kdtree_create: Create a k-d tree for optimal spatial searching.
+   - gal_kdtree_nearest_neighbour: Find the nearest neighbor using a k-d tree.
    - gal_statistics_histogram2d: Generate 2D histogram from two columns.
    - GAL_WCS_FLTERROR: Limit to identify a floating point error for WCS.
    - gal_wcs_write: Write the given WCS into a FITS extension with no data.
