ConvertType: new sls-inverse colormap, good for printing
The SLS colormap is a good color map for viewing on the monitor, but for
printing and some types of visualizations, its very dark background
decreases its usefulness.

With this commit, there is now an inverse SLS color map (called
'sls-inverse') to keep the advantages of SLS, but good for scenarios where
a white background can help.

--- a/NEWS
+++ b/NEWS
@@ -25,6 +25,10 @@ See the end of the file for license conditions.
      will be read as floating point. This also applies to column arithmetic
      in Table.
 
+  ConvertType:
+   - New colormap: 'sls-inverse' is the inverse of the SLS color, good for
+     printing because of a white background.
+
   CosmicCalculator:
    --velocity: Velocity (in km/s) to use instead of input redshift.
    --usedvelocity: Print the velocity (in km/s) at input redshift.
