Building: added check for systems without OBSFIX in their WCSLIB
Until now, we were simply assuming that the host WCSLIB has the 'OBSFIX'
keyword in the newly added step to run 'wcsfix' on the extracted WCS. But
it is a relatively recent keyword in WCSLIB that isn't available on some
systems, causing a crash.

With this commit, a configure-time check has been added and if this macro
isn't present, then the part that uses it won't be compiled.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -19006,6 +19006,10 @@ This macro has a value of 1 if the host's WCSLIB has the @file{wcslib/dis.h} hea
 This macro has a value of 1 if the host's WCSLIB reads and stores the @file{MJDREF} FITS header keyword as part of its core @code{wcsprm} structure.
 @end deffn
 
+@deffn Macro GAL_CONFIG_HAVE_WCSLIB_OBSFIX
+This macro has a value of 1 if the host's WCSLIB supports the @code{OBSFIX} feature (used by @code{wcsfix} function to parse the input WCS for known errors).
+@end deffn
+
 @deffn Macro GAL_CONFIG_HAVE_PTHREAD_BARRIER
 The POSIX threads standard define barriers as an optional requirement.
 Therefore, some operating systems choose to not include it.
