MakeProfiles: only print status of profiles when they are <50
Until now, MakeProfiles would print a line for every built profile, and say
that there are "N" profiles left. However, in many scenarios (in paritcular
aperture profiles that are small!) the printing itself can be slower than
the creation time of the profile and this will un-necessarily slow-down the
program.

With this commit, MakeProfiles now only prints the profile status if there
are more than 50 profiles (so the wasted time is not felt). Otherwise, it
just prints a statement that profiles are being built.

--- a/NEWS
+++ b/NEWS
@@ -111,6 +111,12 @@ See the end of the file for license conditions.
    - The 'pow' operator can also accept integer inputs. This also applies
      to column arithmetic in Table.
 
+  MakeProfiles:
+   - The status of every created profile (along with the number of
+     remaining profiles) is no longer printed when there are more than 50
+     profiles. This is done because printing itself can slow down the
+     program an in a general/automated script this info is redundant.
+
   Table:
    --catcolumnfile ('-L') is new name for '--catcolumn' ('-C').
    --catcolumnhdu is new name for '--catcolhdu' (short option name hasn't
